fixed image details alignment issues

--- a/src/WebUI/ImageDetails/ImageDetails.scss
+++ b/src/WebUI/ImageDetails/ImageDetails.scss
@@ -22,18 +22,17 @@
 }
 // end of above common css copied
 
-.image-details-content {
-    .image-details-header {
-        padding-left: 0;
-        margin-left: 0;
+.image-details-content .image-details-header .image-details-back-button {
+    cursor: pointer;
+}
 
-        .image-details-back-button {
-            cursor: pointer;
-        }
-    }
+// todo :: once summary card is available we should remove this
+.image-details-key .image-o-k-col-content,
+.image-details-value .image-o-v-col-content {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
 
-    .image-details-card,
-    .image-layers-card {
-        margin-top: 16px;
-    }
+.image-details-card .image-full-details-table {
+    padding-top: 13px;
 }
